--- a/force-app/main/default/classes/ResourceTriggerHandler.cls
+++ b/force-app/main/default/classes/ResourceTriggerHandler.cls
@@ -21,7 +21,7 @@ public with sharing class ResourceTriggerHandler extends TriggerHandler {
         articleService.validateUpdatedDate(newList);
         articleService.updateRemoveSharing(newList, (Map<Id, Resource__c>) oldMap);
         articleService.assignRecordTypeFor3dParty(newList);
-        articleService.getUrlVideoFromBody(newList, (Map<Id, Resource__c>) oldMap);
+        articleService.getUrlVideoFromBody(newList);
     }
 
     public override void afterInsert(List<SObject> newList) {
