--- a/force-app/main/default/classes/ClinicalTrialProfileService.cls
+++ b/force-app/main/default/classes/ClinicalTrialProfileService.cls
@@ -14,25 +14,41 @@ public with sharing class ClinicalTrialProfileService {
         resService.deleteRelatedToStudyDocuments(completedTrials);
     }
 
-    public void addTherapeuticAreasToParticipants(List<Clinical_Trial_Profile__c> newList, Map<Id, Clinical_Trial_Profile__c> oldMap) {
+    public void addDeleteTherapeuticAreasOnParticipants(List<Clinical_Trial_Profile__c> newList, Map<Id, Clinical_Trial_Profile__c> oldMap) {
 
-        TherapeuticAreaPatientService service = (TherapeuticAreaPatientService) ClassFactory.newInstance(TherapeuticAreaPatientService.class);
         List<Clinical_Trial_Profile__c> cTPsWithChangedTA = new List<Clinical_Trial_Profile__c>();
         for (Clinical_Trial_Profile__c singleCTP : newList) {
-            if (singleCTP.Therapeutic_Area__c != null && singleCTP.Therapeutic_Area__c != oldMap.get(singleCTP.Id).Therapeutic_Area__c) {
+            if (singleCTP.Therapeutic_Area__c != oldMap.get(singleCTP.Id).Therapeutic_Area__c) {
                 cTPsWithChangedTA.add(singleCTP);
             }
         }
         if (!cTPsWithChangedTA.isEmpty()) {
-            this.addTherapeuticAreasToParticipants(cTPsWithChangedTA);
+            this.addDeleteTherapeuticAreasOnParticipants(cTPsWithChangedTA);
         }
     }
 
-    private void addTherapeuticAreasToParticipants(List<Clinical_Trial_Profile__c> cTPs) {
+    private void addDeleteTherapeuticAreasOnParticipants(List<Clinical_Trial_Profile__c> cTPs) {
 
         TherapeuticAreaPatientService service = (TherapeuticAreaPatientService) ClassFactory.newInstance(TherapeuticAreaPatientService.class);
-        DatabaseProxy databaseProxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class);
+        Map<Id, Id> tAsByParticipantsIds = this.getTAsIdsByParticipantsIdsOnCTPs(cTPs);
+        if (!tAsByParticipantsIds.isEmpty()) {
+            List<Therapeutic_Area_Patient__c> tAPToDelete = new List<Therapeutic_Area_Patient__c>();
+            List<Therapeutic_Area_Patient__c> tAPToCreate = new List<Therapeutic_Area_Patient__c>();
+            List<Participant__c> participants = this.getParticipantsByIdsSet(tAsByParticipantsIds.keySet());
+            for (Participant__c singleParticipant : participants) {
+                tAPToDelete.addAll(singleParticipant.Therapeutic_Area_Patients__r);
+                if(tAsByParticipantsIds.get(singleParticipant.Id) != null) {
+                    tAPToCreate.add(service.getRelatedToStudyTherapeuticAreaPatient(singleParticipant.Id, tAsByParticipantsIds.get(singleParticipant.Id)));
+                }
+            }
+            delete tAPToDelete;
+            insert tAPToCreate;
+        }
+    }
 
+    private Map<Id, Id> getTAsIdsByParticipantsIdsOnCTPs(List<Clinical_Trial_Profile__c> cTPs) {
+
+        DatabaseProxy databaseProxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class);
         String enrollmentsQuery =
                 'SELECT Participant__c, ' +
                         'Study_Site__r.Clinical_Trial_Profile__r.Therapeutic_Area__c ' +
@@ -44,19 +60,17 @@ public with sharing class ClinicalTrialProfileService {
         for (Participant_Enrollment__c singlePE : enrollments) {
             tAsByParticipantsIds.put(singlePE.Participant__c, singlePE.Study_Site__r.Clinical_Trial_Profile__r.Therapeutic_Area__c);
         }
-        List<Therapeutic_Area_Patient__c> tAPToDelete = new List<Therapeutic_Area_Patient__c>();
-        List<Therapeutic_Area_Patient__c> tAPToCreate = new List<Therapeutic_Area_Patient__c>();
+        return tAsByParticipantsIds;
+    }
+
+    private List<Participant__c> getParticipantsByIdsSet(Set<Id> participantsIds) {
+
+        DatabaseProxy databaseProxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class);
         String participantsQuery =
                 'SELECT Id, ' +
                         '(SELECT Id FROM Therapeutic_Area_Patients__r WHERE IsRelatedToStudy__c = TRUE) ' +
-                'FROM Participant__c ' +
-                'WHERE Id IN (' + String.join(CollectionUtil.getListOfIdsWrappedInApostrophes(tAsByParticipantsIds.keySet()), ', ') + ')';
-        List<Participant__c> participants = databaseProxy.query(participantsQuery);
-        for (Participant__c singleParticipant : participants) {
-            tAPToDelete.addAll(singleParticipant.Therapeutic_Area_Patients__r);
-            tAPToCreate.add(service.getRelatedToStudyTherapeuticAreaPatient(singleParticipant.Id, tAsByParticipantsIds.get(singleParticipant.Id)));
-        }
-        delete tAPToDelete;
-        insert tAPToCreate;
+                        'FROM Participant__c ' +
+                        'WHERE Id IN (' + String.join(CollectionUtil.getListOfIdsWrappedInApostrophes(participantsIds), ', ') + ')';
+        return (List<Participant__c>) databaseProxy.query(participantsQuery);
     }
 }
